--- a/Projet-html-css-exercice2/assets/css/style.css
+++ b/Projet-html-css-exercice2/assets/css/style.css
@@ -12,6 +12,9 @@ header{
     height: 6em;
     border-bottom: solid 2px #322f36;
 }
+section{
+    width: 100%;
+}
 img{
     width: 260px;
     padding-top: 1%;
@@ -65,7 +68,7 @@ h1{
     color: white;
 }
 strong{
-    font-weight: bolder;
+    font-weight: bold;
 }
 h2{
     font-size: large;
@@ -147,25 +150,30 @@ figure{
     margin-right: 30%
 }
 .table1{
-    margin: 5%;
-}
-table{
-    margin-left: 15%;
-    margin-right: 15%;
+    display: flex;
+    justify-content: center;
+    padding-top: 3%;
+    margin-top: 2%;
+    padding-bottom: 6%;
+    background-image: url(../img/map_bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    
 }
 td{
-    width:150px;
+    width: 150px;
+
 }
 td > div{
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    width: 150px;
+    justify-content: left;
 }
-td > div >img{
+td > div > img{
     width: 17%;
     height: 17%;
-    padding: 0%;
+    padding: 0;
+    text-align: left;
 }
 td > div > p{
     font-weight: bold;
@@ -181,3 +189,134 @@ td > div > p{
     text-align: left;
     padding-left: 5%;
 }
+.figure_table{
+    position: relative;
+    text-align: center;
+}
+.image2{
+    width: 210px;
+    
+}
+.legend{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-family: Helvetica, Arial, sans-serif, 'Raleway';
+}
+.content4{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 3%;
+    background-color: #322f36;
+}
+.avatar{
+    width: 8%;
+}
+.text3{
+    color: white;
+    text-align: center;
+    padding-left: 30%;
+    padding-right: 30%;
+    font-weight: lighter;
+}
+.nom{
+    text-align: center;
+    color: #3d9f96 ;
+}
+
+.text4{
+    text-align: left;
+    color: black;
+    padding-top: 5%;
+    font-size: xx-large;
+    font-weight: lighter;
+    padding-left: 20%;
+    padding-right: 20%;
+    margin-top: 0%;
+}
+.content5{
+    background-color: #f9f9f9;
+}
+.screenshot{
+    display: flex;
+    justify-content: center;
+}
+.table2{
+    border-spacing: 2%;
+    padding-top: 1%;
+    padding-bottom: 5%;
+}
+.ligne2{
+    width: 250px;
+}
+.screen{
+    width: 90%;
+}
+.figcaption{
+    font-weight: bold;
+}
+.table3{
+    display: flex;
+    justify-content: center;
+    padding-top: 3%;
+}
+.content6{
+    background-color: white;
+}
+.text5{
+    text-align: left;
+    color: black;
+    font-size: x-large;
+    font-weight: lighter;
+    margin-top: 0%;
+    margin-bottom: 10%;
+    width: 200px;
+}
+.image3{
+    width: 300px;
+    height: 310px;
+}
+
+.button2{
+    color: white;
+    background-color: #3d9f96;
+    border: #3d9f96;
+    border-radius: 20px;
+    width: 12em;
+    height: 3em;
+    font-family: "Open Sans", "Arial", "sans-serif";
+    cursor: pointer;
+    margin-top: 15%;
+    margin-bottom: 15%;
+    margin-left: 0%;
+}
+.table_text2 {
+    color: black;
+    font-weight: lighter;
+    font-size: 0.8em;
+    padding-top: 2%;
+    text-align: left;
+    padding: 0%;
+    margin-bottom: 20%;
+    margin-top: 20%;
+}
+.text6{
+    text-align: left;
+    color: black;
+    font-size: x-large;
+    font-weight: lighter;
+    margin-top: 0%;
+    margin-bottom: 10%;
+    width: 250px;
+}
+.table4{
+    padding-left: 7%;
+    display: flex;
+    justify-content: center;
+    padding-top: 3%;
+    padding-bottom: 3%;
+}
+
