--- a/Projet-html-css-exercice2-sans-bootstrap/assets/css/style.css
+++ b/Projet-html-css-exercice2-sans-bootstrap/assets/css/style.css
@@ -1,10 +1,11 @@
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800|Raleway:400,200,100,300,500,600,700,800,900);
-body{
+body {
     margin: 0;
     padding: 0;
     font-family: "Open Sans", "Arial", "sans-serif";
 }
-header{
+
+header {
     display: flex;
     flex-direction: row;
     background-color: #27242b;
@@ -12,14 +13,17 @@ header{
     height: 6em;
     border-bottom: solid 2px #322f36;
 }
-section{
+
+section {
     width: 100%;
 }
-img{
+
+img {
     width: 260px;
     padding-top: 1%;
 }
-.menu{
+
+.menu {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -27,63 +31,74 @@ img{
     margin-left: 12%;
     padding-top: 3%;
 }
-.menu > a{
+
+.menu>a {
     text-decoration: none;
     color: white;
     font-family: "Open Sans", "Arial", "sans-serif";
     font-weight: bold;
     font-size: smaller;
 }
-.logo{
-    width:60%;
+
+.logo {
+    width: 60%;
 }
-.menu2{
+
+.menu2 {
     width: 10%;
     padding-top: 3%;
     margin-right: 12%;
 }
-.menu2 > a {
+
+.menu2>a {
     color: #3d9f96;
     font-family: "Open Sans", "Arial", "sans-serif";
     font-weight: bold;
     font-size: smaller;
 }
-.content1{
+
+.content1 {
     background-color: #27242b;
     height: 600px;
     overflow: hidden;
 }
-.part1{
+
+.part1 {
     text-align: center;
     margin-top: 0;
     font-family: "Open Sans", "Arial", "sans-serif";
     margin-left: 25%;
     margin-right: 25%;
 }
-h1{
+
+h1 {
     font-size: 2.4em;
-    font-weight:lighter;
+    font-weight: lighter;
     margin: 0;
     padding-top: 7%;
     color: white;
 }
-strong{
+
+strong {
     font-weight: bold;
 }
-h2{
+
+h2 {
     font-size: large;
     color: #3d9f96;
     font-weight: bold;
     font-family: "Open Sans", "Arial", "sans-serif";
     text-align: center;
 }
-.text1{
+
+.text1 {
     color: white;
     font-weight: lighter;
     font-size: 0.8em;
     padding-top: 2%;
 }
-button{
+
+button {
     color: white;
     background-color: #3d9f96;
     border: #3d9f96;
@@ -97,7 +112,8 @@ button{
     margin-top: 2%;
     cursor: pointer;
 }
-#image1{
+
+#image1 {
     width: 65%;
     display: block;
     margin-left: auto;
@@ -107,11 +123,13 @@ button{
     padding: 0;
     padding-top: 2%;
 }
-.content2{
+
+.content2 {
     background-color: #f7f7f7;
-    height:200px;
+    height: 200px;
 }
-figure{
+
+figure {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -120,27 +138,31 @@ figure{
     margin-top: 0%;
     margin-bottom: 0%;
 }
-.social_icon1{
+
+.social_icon1 {
     width: 4%;
     padding: 0;
     margin-left: 2%;
     margin-right: 2%;
 }
-.content2 > h2{
+
+.content2>h2 {
     padding-bottom: 5%;
 }
-.content3{
+
+.content3 {
     background-color: white;
-    
 }
-.text2{
+
+.text2 {
     color: black;
     padding-top: 2%;
     font-size: xx-large;
     text-align: center;
     font-weight: lighter;
 }
-.text2+p{
+
+.text2+p {
     color: black;
     font-weight: lighter;
     font-size: 0.8em;
@@ -149,7 +171,8 @@ figure{
     margin-left: 30%;
     margin-right: 30%
 }
-.table1{
+
+.table1 {
     display: flex;
     justify-content: center;
     padding-top: 3%;
@@ -158,30 +181,33 @@ figure{
     background-image: url(../img/map_bg.png);
     background-repeat: no-repeat;
     background-position: center;
-    
 }
-td{
-    width: 150px;
 
+td {
+    width: 150px;
 }
-td > div{
+
+td>div {
     display: flex;
     flex-direction: row;
     justify-content: left;
 }
-td > div > img{
+
+td>div>img {
     width: 17%;
     height: 17%;
     padding: 0;
     text-align: left;
 }
-td > div > p{
+
+td>div>p {
     font-weight: bold;
     text-align: center;
     margin: 0%;
     padding-left: 8%;
 }
-.table_text{
+
+.table_text {
     color: black;
     font-weight: lighter;
     font-size: 0.8em;
@@ -189,15 +215,17 @@ td > div > p{
     text-align: left;
     padding-left: 5%;
 }
-.figure_table{
+
+.figure_table {
     position: relative;
     text-align: center;
 }
-.image2{
+
+.image2 {
     width: 210px;
-    
 }
-.legend{
+
+.legend {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -205,29 +233,33 @@ td > div > p{
     color: white;
     font-family: Helvetica, Arial, sans-serif, 'Raleway';
 }
-.content4{
+
+.content4 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 3%;
     background-color: #322f36;
 }
-.avatar{
+
+.avatar {
     width: 8%;
 }
-.text3{
+
+.text3 {
     color: white;
     text-align: center;
     padding-left: 30%;
     padding-right: 30%;
     font-weight: lighter;
 }
-.nom{
+
+.nom {
     text-align: center;
-    color: #3d9f96 ;
+    color: #3d9f96;
 }
 
-.text4{
+.text4 {
     text-align: left;
     color: black;
     padding-top: 5%;
@@ -237,36 +269,45 @@ td > div > p{
     padding-right: 20%;
     margin-top: 0%;
 }
-.content5{
+
+.content5 {
     background-color: #f9f9f9;
 }
-.screenshot{
+
+.screenshot {
     display: flex;
     justify-content: center;
 }
-.table2{
+
+.table2 {
     border-spacing: 2%;
     padding-top: 1%;
     padding-bottom: 5%;
 }
-.ligne2{
+
+.ligne2 {
     width: 250px;
 }
-.screen{
+
+.screen {
     width: 90%;
 }
-.figcaption{
+
+.figcaption {
     font-weight: bold;
 }
-.table3{
+
+.table3 {
     display: flex;
     justify-content: center;
     padding-top: 3%;
 }
-.content6{
+
+.content6 {
     background-color: white;
 }
-.text5{
+
+.text5 {
     text-align: left;
     color: black;
     font-size: x-large;
@@ -275,12 +316,13 @@ td > div > p{
     margin-bottom: 10%;
     width: 200px;
 }
-.image3{
+
+.image3 {
     width: 300px;
     height: 310px;
 }
 
-.button2{
+.button2 {
     color: white;
     background-color: #3d9f96;
     border: #3d9f96;
@@ -293,6 +335,7 @@ td > div > p{
     margin-bottom: 15%;
     margin-left: 0%;
 }
+
 .table_text2 {
     color: black;
     font-weight: lighter;
@@ -303,7 +346,8 @@ td > div > p{
     margin-bottom: 20%;
     margin-top: 20%;
 }
-.text6{
+
+.text6 {
     text-align: left;
     color: black;
     font-size: x-large;
@@ -312,28 +356,34 @@ td > div > p{
     margin-bottom: 10%;
     width: 250px;
 }
-.table4{
+
+.table4 {
     padding-left: 7%;
     display: flex;
     justify-content: center;
     padding-top: 3%;
     padding-bottom: 3%;
 }
-.content7{
+
+.content7 {
     background-color: #f7f7f7;
 }
-.table5{
+
+.table5 {
     display: flex;
     justify-content: center;
 }
-.logo2{
+
+.logo2 {
     display: flex;
     justify-content: left;
 }
-th{
+
+th {
     text-align: left;
 }
-.table_text4{
+
+.table_text4 {
     color: black;
     font-weight: lighter;
     font-size: 0.8em;
@@ -341,7 +391,8 @@ th{
     text-align: left;
     padding: 0%;
 }
-.table_text3{
+
+.table_text3 {
     color: black;
     font-weight: lighter;
     font-size: 0.8em;
@@ -350,7 +401,8 @@ th{
     padding-left: 7%;
     width: 200px;
 }
-.style{
+
+.style {
     color: black;
     font-weight: lighter;
     font-size: 0.8em;
@@ -358,20 +410,53 @@ th{
     text-align: left;
     padding: 0%;
 }
-.image5{
+
+.image5 {
     width: 250px;
 }
-.colomn1{
+
+.colomn1 {
     width: 250px;
     padding-left: 7%;
     padding-top: 2%;
     margin: 0%;
 }
-.colomn3{
+
+.colomn3 {
     width: 250px;
     margin: 0%;
 }
-.colomn2{
+
+.colomn2 {
     padding-left: 5%;
     margin: 0%;
+}
+
+footer {
+    background-color: white;
+    padding-left: 18%;
+    padding-right: 18%;
+    margin: 0%;
+}
+
+.footer-image {
+    padding-top: 3%;
+    padding-left: 12%;
+    margin: 0%;
+}
+
+.footer-text {
+    float: left;
+    color: black;
+    font-weight: lighter;
+    font-size: 0.8em;
+    padding-top: 2%;
+    text-align: left;
+}
+
+.footer-icon {
+    width: 5%;
+    display: flex;
+    float: right;
+    padding: 2%;
 }
