--- a/Projet-html-css-exercice2-sans-bootstrap/assets/css/style.css
+++ b/Projet-html-css-exercice2-sans-bootstrap/assets/css/style.css
@@ -35,7 +35,6 @@ img {
 .menu>a {
     text-decoration: none;
     color: white;
-    font-family: "Open Sans", "Arial", "sans-serif";
     font-weight: bold;
     font-size: smaller;
 }
@@ -52,21 +51,19 @@ img {
 
 .menu2>a {
     color: #3d9f96;
-    font-family: "Open Sans", "Arial", "sans-serif";
     font-weight: bold;
     font-size: smaller;
 }
 
 .content1 {
     background-color: #27242b;
-    height: 600px;
+    height: 100vh;
     overflow: hidden;
 }
 
 .part1 {
     text-align: center;
     margin-top: 0;
-    font-family: "Open Sans", "Arial", "sans-serif";
     margin-left: 25%;
     margin-right: 25%;
 }
@@ -108,7 +105,6 @@ button {
     margin-left: auto;
     margin-right: auto;
     display: block;
-    font-family: "Open Sans", "Arial", "sans-serif";
     margin-top: 2%;
     cursor: pointer;
 }
@@ -129,7 +125,7 @@ button {
     height: 200px;
 }
 
-figure {
+.content2>div>figure {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -140,7 +136,7 @@ figure {
 }
 
 .social_icon1 {
-    width: 4%;
+    width: 3%;
     padding: 0;
     margin-left: 2%;
     margin-right: 2%;
@@ -152,9 +148,10 @@ figure {
 
 .content3 {
     background-color: white;
+	padding-bottom: 3%;
 }
 
-.text2 {
+.titre2 {
     color: black;
     padding-top: 2%;
     font-size: xx-large;
@@ -162,7 +159,7 @@ figure {
     font-weight: lighter;
 }
 
-.text2+p {
+.titre2+p {
     color: black;
     font-weight: lighter;
     font-size: 0.8em;
@@ -171,292 +168,294 @@ figure {
     margin-left: 30%;
     margin-right: 30%
 }
-
-.table1 {
-    display: flex;
-    justify-content: center;
-    padding-top: 3%;
-    margin-top: 2%;
-    padding-bottom: 6%;
-    background-image: url(../img/map_bg.png);
-    background-repeat: no-repeat;
-    background-position: center;
+.content3>.part2{
+	display: flex;
+	flex-direction: row;
+	justify-content:center;
+	padding-left: 20%;
+	padding-right: 20%;
+	background-image: url('../img/map_bg.png');
+	background-repeat: no-repeat;
+	background-position: center;
 }
-
-td {
-    width: 150px;
+.content3>.part2>.col2{
+	padding-left: 5%;
+	padding-right: 5%;
 }
-
-td>div {
-    display: flex;
-    flex-direction: row;
-    justify-content: left;
+.content3>.part2>.col1{
+	padding-top: 5%;
 }
-
-td>div>img {
-    width: 17%;
-    height: 17%;
-    padding: 0;
-    text-align: left;
+.content3>.part2>.col3{
+	padding-top: 5%;
 }
-
-td>div>p {
-    font-weight: bold;
-    text-align: center;
-    margin: 0%;
-    padding-left: 8%;
+.list1{
+	display: flex;
+	flex-direction: row;
+	justify-content: start;
+	align-items: flex-end;
+	padding-top: 6%;
 }
-
-.table_text {
-    color: black;
+.list2{
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: end;
+	align-items: flex-end;
+	padding-top: 6%;
+}
+.list2+p{
+	text-align: right;
+}
+.icon{
+	width: 4vh;
+	padding-right: 10%;
+}
+.icon2{
+	width: 4vh;
+	padding-left: 10%;
+}
+p{
+	color: black;
     font-weight: lighter;
     font-size: 0.8em;
+}
+.content4{
+	background-color:#322f36;
+	padding-top: 3%;
+	padding-bottom: 5%;
+}
+.avatar{
+	width:8%;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+}
+.text3{
+	text-align: center;
+	color: white;
+	font-size: medium;
+}
+.content5{
+	padding-top: 3%;
+	padding-bottom: 5%;
+	background-color: #f7f7f7;
+}
+.titre3{
+	color: black;
     padding-top: 2%;
-    text-align: left;
-    padding-left: 5%;
-}
-
-.figure_table {
-    position: relative;
-    text-align: center;
-}
-
-.image2 {
-    width: 210px;
-}
-
-.legend {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-family: Helvetica, Arial, sans-serif, 'Raleway';
-}
-
-.content4 {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    padding-bottom: 3%;
-    background-color: #322f36;
-}
-
-.avatar {
-    width: 8%;
-}
-
-.text3 {
-    color: white;
-    text-align: center;
-    padding-left: 30%;
-    padding-right: 30%;
-    font-weight: lighter;
-}
-
-.nom {
-    text-align: center;
-    color: #3d9f96;
-}
-
-.text4 {
-    text-align: left;
-    color: black;
-    padding-top: 5%;
     font-size: xx-large;
-    font-weight: lighter;
-    padding-left: 20%;
-    padding-right: 20%;
-    margin-top: 0%;
-}
-
-.content5 {
-    background-color: #f9f9f9;
-}
-
-.screenshot {
-    display: flex;
-    justify-content: center;
-}
-
-.table2 {
-    border-spacing: 2%;
-    padding-top: 1%;
-    padding-bottom: 5%;
-}
-
-.ligne2 {
-    width: 250px;
-}
-
-.screen {
-    width: 90%;
-}
-
-.figcaption {
-    font-weight: bold;
-}
-
-.table3 {
-    display: flex;
-    justify-content: center;
-    padding-top: 3%;
-}
-
-.content6 {
-    background-color: white;
-}
-
-.text5 {
     text-align: left;
-    color: black;
-    font-size: x-large;
     font-weight: lighter;
-    margin-top: 0%;
-    margin-bottom: 10%;
-    width: 200px;
+	padding-left: 20%;
 }
-
-.image3 {
-    width: 300px;
-    height: 310px;
+.screenshot{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	padding-left: 18%;
+	padding-right: 20%;
 }
-
-.button2 {
-    color: white;
+.content6{
+	padding-top: 3%;
+	padding-bottom: 5%;
+}
+.content6>div>.part1{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	padding-left: 20%;
+	padding-right: 20%;
+}
+.button2{
+	color: white;
     background-color: #3d9f96;
     border: #3d9f96;
     border-radius: 20px;
     width: 12em;
     height: 3em;
-    font-family: "Open Sans", "Arial", "sans-serif";
+    margin-top: 2%;
     cursor: pointer;
-    margin-top: 15%;
-    margin-bottom: 15%;
-    margin-left: 0%;
 }
-
-.table_text2 {
-    color: black;
-    font-weight: lighter;
-    font-size: 0.8em;
+.titre4{
+	color: black;
     padding-top: 2%;
-    text-align: left;
-    padding: 0%;
-    margin-bottom: 20%;
-    margin-top: 20%;
-}
-
-.text6 {
-    text-align: left;
-    color: black;
     font-size: x-large;
-    font-weight: lighter;
-    margin-top: 0%;
-    margin-bottom: 10%;
-    width: 250px;
-}
-
-.table4 {
-    padding-left: 7%;
-    display: flex;
-    justify-content: center;
-    padding-top: 3%;
-    padding-bottom: 3%;
-}
-
-.content7 {
-    background-color: #f7f7f7;
-}
-
-.table5 {
-    display: flex;
-    justify-content: center;
-}
-
-.logo2 {
-    display: flex;
-    justify-content: left;
-}
-
-th {
     text-align: left;
-}
-
-.table_text4 {
-    color: black;
     font-weight: lighter;
-    font-size: 0.8em;
-    padding-top: 2%;
-    text-align: left;
-    padding: 0%;
 }
-
-.table_text3 {
-    color: black;
-    font-weight: lighter;
-    font-size: 0.8em;
-    padding-top: 0%;
-    text-align: left;
-    padding-left: 7%;
-    width: 200px;
+.content6>div>.part2{
+	display: flex;
+	flex-direction: row-reverse;
+	justify-content: center;
+	align-items: center;
+	margin: 0;
+	padding-left: 25%;
+	padding-right: 25%;
 }
-
-.style {
-    color: black;
-    font-weight: lighter;
-    font-size: 0.8em;
-    padding-top: 2%;
-    text-align: left;
-    padding: 0%;
+.content7{
+	padding-top: 3%;
+	padding-bottom: 5%;
+	background-color: #f7f7f7;
 }
-
-.image5 {
-    width: 250px;
+.container{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	
 }
-
-.colomn1 {
-    width: 250px;
-    padding-left: 7%;
-    padding-top: 2%;
-    margin: 0%;
-}
-
-.colomn3 {
-    width: 250px;
-    margin: 0%;
-}
-
-.colomn2 {
-    padding-left: 5%;
-    margin: 0%;
-}
-
 footer {
     background-color: white;
-    padding-left: 18%;
-    padding-right: 18%;
     margin: 0%;
+	padding-left: 20%;
+	padding-right: 20%;
+}
+.footer{
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding-bottom: 2%;
 }
 
 .footer-image {
-    padding-top: 3%;
-    padding-left: 12%;
     margin: 0%;
+	width: 50%;
+	
 }
 
 .footer-text {
-    float: left;
-    color: black;
+	color: black;
     font-weight: lighter;
-    font-size: 0.8em;
-    padding-top: 2%;
+    font-size: medium;
     text-align: left;
+	padding-top: 2%;
 }
 
 .footer-icon {
-    width: 5%;
-    display: flex;
-    float: right;
-    padding: 2%;
+	float: right;
+    width: 8%;
+	display: flex;
+    padding: 1%;
 }
+/*responsive media query*/
+@media screen and (max-device-width: 768px){
+	header .menu{
+		display: none
+	}
+	header .menu2{
+		display: none;
+	}
+	.logo{
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	h1{
+		font-size: x-large;
+	}
+	h2{
+		font-size: small;
+	}
+	.content1{
+		height: 75vh;
+	}
+	.content2 >div>h2{
+		display:none;
+	}
+	.content2{
+	height: 12vh;
+	}
+	.text2{
+		font-size:x-large;
+	}
+	.titre2{
+		font-size:x-large;
+	}
+	.content3>.part2{
+		display: block;
+		text-align: center;
+	}
+	.part2>.col1>p{
+		text-align:center;
+	}
+	.list1{
+		justify-content:center;
+	}
+	.list2+p{
+		text-align:center;
+	}
+	.list2{
+		justify-content:center;
+		flex-direction: row;
+	}
+	.icon2{
+		padding-right: 10%;
+		padding-left:0;
+	}
+	.screenshot{
+		display: block;
+	}
+	.screen{
+		width: 60% !important; 
+	}
+	.titre3{
+		text-align: center;
+		padding:0;
+	}
+	.content6>div>.part1{
+		flex-direction: column;
+	}
+	.content6>div>.part2{
+		flex-direction: column;
+	}
+	.titre4{
+		text-align: center;
+	}
+	.titre4+p{
+		text-align: center !important;
+		width: 100% !important;
+	}
+	.button2{
+		float:both !important;
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	.container{
+		flex-direction: column;
+		text-align: center;
+	}
+	.sayna{
+		width: 100% !important;
+	}
+	.info{
+		width: 100% !important;
+	}
+	.contact{
+		width: 100% !important;
+	}
+	.sayna>figure,p{
+		width: 100% !important;
+	}
+	.footer{
+		flex-direction: column;
+		justify-content: center;
+	}
+	footer{
+		padding-right: 0;
+		padding-left: 0;
+	}
+	.footer-text{
+		width: 100% !important;
+		text-align: center;
+	}
+	.footer-image {
+    margin: 0%;
+	width: 100% !important;
+	text-align: center;
+	padding-right: 50%;
+	}
+	
+	
+	
